# vidgen

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: contraints.txt  coverage.yml  release-drafter.yml  release.yml  safety.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/vidgen/: __init__.py  console.py  reddit.py
tests/: __init__.py  conftest.py  test_console.py  test_reddit.py
