[tool.poetry]
name = "vidgen"
version = "0.2.0"
description = "Automatic video generation"
license = "MIT"
readme = "README.md"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"
importlib_metadata = {version = "^1.6.0", python = "<3.8"}
praw = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.780"
pytype = {version = "^2020.6.1", python = "3.7"}
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.0"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.1.4"
sphinx-autobuild = "^0.7.1"

[tool.poetry.scripts]
vidgen = "vidgen.console:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["vidgen"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
