[tool.poetry]
name = "vidgen"
version = "0.2.0"
description = "Automatic video generation"
license = "MIT"
readme = "README.md"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
praw = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.790"
pytype = {version = "^2020.12.2", python = "3.7"}
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.10"
sphinx-autobuild = "^2020.9.1"

[tool.poetry.scripts]
vidgen = "vidgen.console:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["vidgen"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
